# opencl-raytrace

./: Cargo.toml
cl/: main.cl
src/: bin.rs  kernel.cl  main.rs  scene.rs
